apps/immich/immich-ml.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-ml
spec:
  selector:
    matchLabels:
      app: immich-ml
  serviceName: immich-ml
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      terminationGracePeriodSeconds: 10
      updateStrategy:
        type: RollingUpdate
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:v2.5.2 # {"$imagepolicy": "flux-system:immich-ml"}
          ports:
            - containerPort: 3003
              name: http
          volumeMounts:
            - name: immich-models
              mountPath: /cache
          resources:
            requests:
              cpu: 750m
              memory: 1.5Gi
            limits:
              cpu: 1000m
              memory: 2Gi
  volumeClaimTemplates:
    - metadata:
        name: immich-models
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
