apps/immich/immich.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich
spec:
  selector:
    matchLabels:
      app: immich
  serviceName: immich
  replicas: 1
  template:
    metadata:
      labels:
        app: immich
    spec:
      terminationGracePeriodSeconds: 10
      updateStrategy:
        type: RollingUpdate
      containers:
      - name: immich
        #image: ghcr.io/immich-app/immich-server:v2.4.1 # {"$imagepolicy": "home:immich"}
        image: debian
        command: ["/bin/sh", "-c", "while true; do echo hello; sleep 10; done"]
        ports:
        - name: http
          containerPort: 2283
        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: data
        resources:
          requests:
            cpu: 2
            memory: 8Gi
          limits:
            cpu: 2500m
            memory: 8Gi
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1.5Ti
