apps/immich/server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich
spec:
  selector:
    matchLabels:
      app: immich
  serviceName: immich
  replicas: 1
  template:
    metadata:
      labels:
        app: immich
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:v1.133.0
        ports:
          - name: http
            containerPort: 2283 
        volumeMounts:
          - mountPath: /usr/src/app/upload
            name: data
        resources:
          requests:
            cpu: 2
            memory: 8Gi
          limits:
            cpu: 2500m
            memory: 8Gi
  volumeClaimTemplates:
  - metadata:
      name:  data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 512Gi
