apps/immich/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: home
  labels:
    app: immich
spec:
  ports:
  - port: 2283
    name: http
  type: ClusterIP
  selector:
    app: immich
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: home
  labels:
    app: immich-ml
spec:
  ports:
  - port: 3003
    name: http
  type: ClusterIP
  selector:
    app: immich-ml
