apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: home
  annotations:
    nginx.org/websocket-services: "immich"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-cloudflare"
    nginx.org/client-max-body-size: "4096m"
    nginx.org/proxy-read-timeout: 600s
    nginx.org/proxy-send-timeout: 600s
    nginx.org/proxy-connect-timeout: 600s

spec:
  ingressClassName: nginx
  rules:
  - host: photos.vbalex.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: immich
              port:
                name: http
  tls: 
  - hosts:
    - photos.vbalex.com
    secretName: tls-com-vbalex-photos
